correct mistakes from exam

--- a/css/style.css
+++ b/css/style.css
@@ -43,24 +43,23 @@ body {
     .section_title--white:after {
       border-bottom: 2px solid #fff; }
 
-.header,
-.services,
-.item,
-.work,
-.footer {
-  padding: 0 215px; }
+.container {
+  width: 1170px;
+  margin: 0 auto; }
 
 .header {
   height: 100vh;
   background: url(../img/bg_img.jpg);
   background-repeat: no-repeat;
-  padding-top: 45px;
-  padding-bottom: 45px;
-  background-size: cover;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center; }
+  background-size: cover; }
+  .header .container {
+    height: inherit;
+    padding-top: 45px;
+    padding-bottom: 45px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center; }
 
 .logo {
   display: inline-block;
@@ -79,22 +78,23 @@ body {
     font-family: 'Lato', sans-serif;
     font-weight: 400;
     text-transform: uppercase;
-    width: calc(100%-130px);
+    width: calc(100% - 200px);
     list-style: none;
     text-align: right; }
-  .nav__menu li {
-    display: inline-block;
-    padding-left: 45px;
-    font-size: 14px; }
-  .nav__menu li:first-of-type {
-    padding-left: 0; }
-  .nav__menu li a {
-    text-decoration: none;
-    color: #fff;
-    border-bottom: 2px solid transparent; }
-  .nav__menu li a:hover,
-  .nav__menu li a:focus {
-    border-bottom: 2px solid #fff; }
+    .nav__menu ul {
+      margin: 0; }
+    .nav__menu li {
+      display: inline-block;
+      padding-left: 45px;
+      font-size: 14px; }
+      .nav__menu li:first-of-type {
+        padding-left: 0; }
+      .nav__menu li a {
+        text-decoration: none;
+        color: #fff;
+        border-bottom: 2px solid transparent; }
+        .nav__menu li a:hover, .nav__menu li a:focus {
+          border-bottom: 2px solid #fff; }
 
 .title,
 .subtitle {
@@ -134,12 +134,11 @@ body {
 
 .service {
   text-align: center;
-  line-height: 2;
+  line-height: 2em;
   font-family: 'Lato', sans-serif; }
   .service__title {
     margin: 45px 0;
     font-size: 24px;
-    letter-spacing: .5;
     text-transform: capitalize; }
   .service__descr {
     font-size: 16px;
@@ -159,7 +158,7 @@ body {
   .content__title {
     font-weight: 400;
     font-size: 35px;
-    line-height: 2;
+    line-height: 2em;
     text-transform: uppercase; }
   .content__descr {
     font-weight: 100;
