--- a/scss/style.scss
+++ b/scss/style.scss
@@ -55,25 +55,34 @@ body {
 	}
 }
 
-.header,
-.services,
-.item,
-.work,
-.footer {
-	padding: 0 215px;	
+//.header,
+//.services,
+//.item,
+//.work,
+//.footer {
+//	padding: 0 215px;	
+//}
+
+.container {
+	width: 1170px;
+	margin: 0 auto;
 }
 
 .header {
 	height: 100vh;
 	background: url(../img/bg_img.jpg);
 	background-repeat: no-repeat;
-	padding-top: 45px;
-	padding-bottom: 45px;
 	background-size: cover;
-	display: flex;
-	flex-direction: column;
-	justify-content:space-between;
-	align-items:center;
+	.container {
+		height: inherit;
+		padding-top: 45px;
+		padding-bottom: 45px;
+		display: flex;
+		flex-direction: column;
+		justify-content:space-between;
+		align-items:center;
+
+	}
 }
 .logo {
 	display: inline-block;
@@ -92,26 +101,29 @@ body {
 		font-family: 'Lato', sans-serif;
 		font-weight: 400;
 		text-transform: uppercase;
-		width: calc(100%-130px);
+		width: calc(100% - 200px);
 		list-style: none;
 		text-align: right;
-	}
-	&__menu li {
-		display: inline-block;
-		padding-left: 45px;
-		font-size: 14px;
-	}
-	&__menu li:first-of-type {
-		padding-left: 0;
-	}
-	&__menu li a {
-		text-decoration: none;
-		color: #fff;
-		border-bottom: 2px solid transparent;
-	}
-	&__menu li a:hover,
-	&__menu li a:focus {
-		border-bottom: 2px solid #fff;
+		ul {
+			margin:0;
+		}
+		li {
+			display: inline-block;
+			padding-left: 45px;
+			font-size: 14px;
+			&:first-of-type {
+				padding-left: 0;
+			}
+			a {
+				text-decoration: none;
+				color: #fff;
+				border-bottom: 2px solid transparent;
+				&:hover,
+				&:focus {
+					border-bottom: 2px solid #fff;
+				}
+			}
+		}
 	}
 }
 
@@ -158,12 +170,11 @@ body {
 
 .service {
 	text-align: center;
-	line-height: 2;
+	line-height: 2em;
 	font-family: 'Lato', sans-serif;
 	&__title {
 		margin: 45px 0;
 		font-size: 24px;
-		letter-spacing: .5;
 		text-transform: capitalize;
 	}
 	&__descr {
@@ -187,7 +198,7 @@ body {
 	&__title {
 		font-weight: 400;
 		font-size: 35px;
-		line-height: 2;
+		line-height: 2em;
 		text-transform: uppercase;
 	}
 	&__descr {
@@ -198,7 +209,7 @@ body {
 		margin-top: 70px;
 		font-weight: 400;
 		font-size: 18px;
-		color: 	rgba(255, 255, 255, .5);
+		color: 	rgba(255, 255, 255, 0.5);
 		&:hover,
 		&:focus {
 			color: 	rgba(255, 255, 255, 1);
@@ -241,7 +252,7 @@ body {
 	font-weight: 400;
 	font-size: 18px;
 	text-transform: uppercase;
-	color: rgba(255, 255, 255, .5);
+	color: rgba(255, 255, 255, 0.5);
 	text-align: center;
 	position: absolute;
 	background-color: $dark-gray;
@@ -282,7 +293,7 @@ body {
 
 	margin: 80px auto 0 auto;
 	width: 370px;
-	color: rgba(0, 0, 0, .75);
+	color: rgba(0, 0, 0, 0.75);
 	background-color: #fff;
 	border: 2px solid $dark-gray;		
 }
@@ -308,7 +319,7 @@ body {
 		padding-left: 0;
 	}
 	 li a {
-		color: rgba(255, 255, 255, .5);
+		color: rgba(255, 255, 255, 0.5);
 	}
 	 li a:hover,
 	 li a:focus {
@@ -326,10 +337,10 @@ body {
 	font-family: 'Lato', sans-serif;
 	font-weight: 400;
 	font-size: 18px;
-	color: rgba(255, 255, 255, .7);
+	color: rgba(255, 255, 255, 0.7);
 	margin: 0;
 	border: none;
-	border-bottom: 2px solid rgba(255, 255, 255, .7);
+	border-bottom: 2px solid rgba(255, 255, 255, 0.7);
 	background-color: transparent;
 	outline:none;
 	&--fullwidth {
